# pyruns

./: .flake8  .gitignore  LAST_OPUS4.6.md  LICENSE  README-en.md  README.md  TROUBLESHOOTING.md  _pyruns_settings.yaml  index.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  python-app.yml
.vitepress/: config.mts
_pyruns_/: _pyruns_settings.yaml
docs/: api-reference.md  architecture.md  batch-syntax.md  cli-guide.md  configuration.md  development.md  getting-started.md  index.md  showcase.md  ui-guide.md
docs/.vitepress/: config.mts
examples/: README.md
examples/1_argparse_script/: main.py
examples/2_pyruns_config/: config1.yaml  main.py  main1.py  main2.py
examples/3_hydra_script/: train.py
examples/3_metrics_logging/: train.py
examples/4_advanced_argparse/: README.md  main.py
examples/5_pyruns_load_nested/: README.md  accelerate_train.py  train.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
pyruns/: __init__.py  _config.py  cli.py  launcher.py
pyruns.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: check_frontend_static.py  check_wheel_static.py
tests/: conftest.py  test_add_monitor.py  test_batch_flow.py  test_cli.py  test_config_utils.py  test_core.py  test_dependency_metadata.py  test_events.py  test_examples.py  test_gpu_scheduler.py  test_integration.py  test_report.py  test_task_generator.py  test_task_io.py  test_task_utils.py  test_ui.py  test_utils.py  test_web.py
tools/: serve_ui_headless.py
(+892 files in other folders)
