[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyruns"
version = "0.0.8"
description = "Lightweight web UI for managing, running, and monitoring Python experiments."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "LthreeC", email = "lanshiL3C@gmail.com" }]
keywords = [
    "experiment-management",
    "hyperparameter-tuning",
    "task-runner",
    "monitoring",
    "nicegui",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = ["nicegui>=1.4", "pyyaml>=5.4", "psutil>=5.9"]

[project.scripts]
pyr = "pyruns.cli:pyr"
pyrun = "pyruns.cli:pyr"
pyruns = "pyruns.cli:pyr"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyruns*"]

[tool.setuptools.package-data]
"pyruns" = ["*.css", "**/*.css", "*.js", "**/*.js"]
